# effective-opencv

./: CMakeLists.txt  MatTraversal.cpp  README.md
Blob/: CMakeLists.txt  blob.cpp
Harris/: CMakeLists.txt  cornerHarris.cpp  cornerHarris.h
SIFT/: CMakeLists.txt  sift.cpp
Shi-Tomasi/: CMakeLists.txt  goodFeaturesToTrack.cpp  thresh.cpp
